Add exception controller advice
